--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   },
   "dependencies": {
     "@prisma/client": "^4.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0"
   }
 }
